# libttl

./: README.md  configure.ac
build-aux/: yuck-scmver.c  yuck.c
src/: Makefile.am  nifty.h  ttl-fold.c  ttl-fold.yuck  ttl-rm.c  ttl-rm.yuck  ttl-wc.c  ttl-wc.yuck  ttl.c  ttl.h  ttl2nt.c  ttl2nt.yuck  ttl2ttl.c  ttl2ttl.yuck  ttldecl.c  ttlrdr.c  ttlstr.c
test/: Makefile.am  clitoris.c  long-blank-2.ttl  long-blank-3.ttl  long-blank.ttl  nil-prefix.clit  nil-prefix.ttl  overquot.ttl  trail-punct_01.ttl  trail-punct_02.ttl  undrquot.ttl  xmpl_01.ttl  xmpl_02.ttl  xmpl_03.ttl  xmpl_04.ttl
